# design-patterns

./: .gitignore  readme.md
abstract factory/: Application.hpp  ApplicationConfigurator.cpp  ApplicationConfigurator.hpp  Button.hpp  CMakeLists.txt  Checkbox.hpp  GUIFactory.hpp  readme.md
bridge/: CMakeLists.txt  main.cpp  readme.md
builder/: Builder.hpp  CMakeLists.txt  Car.cpp  Car.hpp  Director.cpp  Director.hpp  SimpleCarBuilder.cpp  SimpleCarBuilder.hpp  main.cpp  readme.md
chain-of-responsibility/: CMakeLists.txt  main.cpp  readme.md
chain-of-responsibility/headers/: Request.hpp  RequestProcessor.hpp  handlers.hpp
decorator/: CMakeLists.txt  Component.cpp  Component.hpp  Decorator.cpp  Decorator.hpp  main.cpp  readme.md
facade/: CMakeLists.txt  main.cpp  readme.md
factory/: CMakeLists.txt  Creator.hpp  Product.hpp  main.cpp  readme.md
mediator/: CMakeLists.txt  button.cpp  button.hpp  component.cpp  component.hpp  input_field.cpp  input_field.hpp  login_mediator.cpp  login_mediator.hpp  main.cpp  mediator.cpp  mediator.hpp  readme.md  text_label.cpp  text_label.hpp
observer/: CMakeLists.txt  main.cpp  readme.md
observer/headers/: Game.hpp  HighScore.hpp  Observer.hpp  Screens.hpp  State.hpp  Subject.hpp
observer/impl/: Game.cpp  HighScore.cpp  Screens.cpp  Subject.cpp
proxy/: CMakeLists.txt  main.cpp  readme.md
proxy/headers/: Proxy.hpp  Service.hpp  ServiceInterface.hpp
singleton/: .gitignore  CMakeLists.txt  main.cpp  readme.md
singleton/headers/: singleton.hpp
strategy/: CMakeLists.txt  main.cpp  readme.md
(+2 files in other folders)
